--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -16,15 +16,15 @@ jobs:
     strategy:
       matrix:
         go-version: [ '1.21','1.21.4' ]
-    name: lint
+    name: golangci-lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Setup Golang ${{ matrix.go-version }}
-      - uses: actions/setup-go@v4
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: ${{ matrix.go-version }}
           cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
