--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   TZ: Asia/Shanghai
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
@@ -19,6 +18,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Auto Creating Tags For Contrib Packages
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.email "tagrobot@ghostbb.io"
           git config --global user.name  "TagRobot"
@@ -40,10 +41,9 @@ jobs:
       - name: Create Github Release
         id: create_release
         uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           name: GB Release ${{ github.ref }}
           draft: false
           prerelease: false
