--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          name: GB Release ${{ github.event.ref }}
+          name: Release ${{ steps.extract_tag_version.outputs.tag_version }}
           draft: false
           prerelease: false
