--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -15,7 +15,7 @@ jobs:
   golangci:
     strategy:
       matrix:
-        go-version: [ '1.21','1.21.4' ]
+        go-version: [ '1.22' ]
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
