--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,5 +15,7 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
         env:
           slug: go-ghostbb/gb
