--- a/.github/workflows/gb.yml
+++ b/.github/workflows/gb.yml
@@ -6,10 +6,8 @@ on:
       - main
   pull_request:
 
-permissions:
-  contents: read
-  # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  # pull-requests: read
+env:
+  TZ: "Asia/Taipei"
 
 jobs:
   gb:
@@ -19,6 +17,10 @@ jobs:
     name: code-test
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Timezone
+        uses: szenius/set-timezone@v1.1
+        with:
+          timezoneLinux: "Asia/Taipei"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Golang ${{ matrix.go-version }}
