ci: :ferris_wheel: ci-gb.yml

--- a/.github/workflows/ci-gb.yml
+++ b/.github/workflows/ci-gb.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-      - main
   pull_request:
 
 env:
@@ -97,11 +96,13 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache: false
 
-      - name: Test
-        run: go test ./... -race
+      - name: Build & Test
+        if: ${{ (github.event_name == 'push' && github.ref != 'refs/heads/master') || github.event_name == 'pull_request' }}
+        run: bash .github/workflows/ci-main.sh
 
-      - name: Coverage
-        run: go test ./... -race -coverprofile=coverage.out -covermode=atomic -coverpkg=./...,ghostbb.io/gb/...
+      - name: Build & Test & Coverage
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        run: bash .github/workflows/ci-main.sh coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
