--- a/.github/workflows/ci-gb.yml
+++ b/.github/workflows/ci-gb.yml
@@ -90,6 +90,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Start Redis Cluster Containers
+        run:  docker-compose -f ".github/workflows/redis/docker-compose.yml" up -d --build
+
       - name: Setup Golang ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
@@ -103,6 +106,9 @@ jobs:
       - name: Build & Test & Coverage
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: bash .github/workflows/ci-main.sh coverage
+
+      - name: Stop Redis Cluster Containers
+        run: docker-compose -f ".github/workflows/redis/docker-compose.yml" down
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
