--- a/.github/workflows/ci-gb.yml
+++ b/.github/workflows/ci-gb.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Build & Test & Coverage
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: bash .github/workflows/ci-main.sh coverage
+        run: bash .github/workflows/ci-gb.sh coverage
 
       - name: Stop Redis Cluster Containers
         run: docker-compose -f ".github/workflows/redis/docker-compose.yml" down
