--- a/.github/workflows/ci-gb.yml
+++ b/.github/workflows/ci-gb.yml
@@ -81,6 +81,33 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
+
+      # Polaris backend server.
+      # docker run -d --name polaris -p 8090:8090 -p 8091:8091 -p 8093:8093  -p 9090:9090 -p 9091:9091 loads/polaris-server-standalone:1.11.2
+      # docker run -d --name polaris -p 8090:8090 -p 8091:8091 -p 8093:8093  -p 9090:9090 -p 9091:9091 loads/polaris-standalone:v1.16.3
+      polaris:
+        image: loads/polaris-standalone:v1.17.2
+        ports:
+          - 8090:8090
+          - 8091:8091
+          - 8093:8093
+          - 9090:9090
+          - 9091:9091
+
+      zookeeper:
+        image: loads/zookeeper:3.8
+        ports:
+          - 2181:2181
+
+      # Etcd service.
+      # docker run -d --name etcd -p 2379:2379 -e ALLOW_NONE_AUTHENTICATION=yes loads/etcd:3.4.24
+      etcd:
+        image: loads/etcd:3.4.24
+        env:
+          ALLOW_NONE_AUTHENTICATION: yes
+        ports:
+          - 2379:2379
+
     steps:
       - name: Setup Timezone
         uses: szenius/set-timezone@v1.1
@@ -89,6 +116,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Start Nacos Containers
+        run: docker-compose -f ".github/workflows/nacos/docker-compose.yml" up -d --build
 
       - name: Start Redis Cluster Containers
         run:  docker-compose -f ".github/workflows/redis/docker-compose.yml" up -d --build
